infra/aggregator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agg
  namespace: ssi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: agg
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: agg
        app: agg
        version: v1
    spec:
      serviceAccountName: agg
      containers:
        - name: agg
          image: ghcr.io/murielparaire/ssi/aggregator:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "300m"
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
