infra/aggregator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agg
  namespace: ssi
  labels:
    app: aggregator
    service: aggregator
spec:
  selector:
    name: agg
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
