infra/aggregator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agg
  namespace: ssi
  labels:
    app: agg
    version: v1
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agg
                port:
                  number: 3000
